Align string keys with web and ios for use same variant

--- a/primer-sdk-android/src/main/res/values-da/strings.xml
+++ b/primer-sdk-android/src/main/res/values-da/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Bekræft mandat</string>
     <string name="name">Navn</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Adresselinje 1</string>
-    <string name="address_line_2">Adresselinje 2 (valgfrit)</string>
-    <string name="address_city">By</string>
-    <string name="address_state">Stat</string>
-    <string name="address_country_code">Land</string>
-    <string name="address_postal_code">Postnummer</string>
+    <string name="addressLine1">Adresselinje 1</string>
+    <string name="addressLine2">Adresselinje 2 (valgfrit)</string>
+    <string name="cityLabel">By</string>
+    <string name="stateLabel">Stat</string>
+    <string name="countryLabel">Land</string>
+    <string name="postalCodeLabel">Postnummer</string>
     <string name="dd_mandate_error">Tjek venligst at alle dine oplysninger er korrekte</string>
     <string name="dd_cancel_message">Ønsker du at annullere tilføjelsen af en bankkonto?</string>
     <string name="data_will_be_lost">Din data vil blive slettet</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Indtast din e-mail</string>
     <string name="enter_address">Indtast din adresse</string>
     <string name="first_last_name">For- og efternavn</string>
-    <string name="first_name">Fornavn</string>
-    <string name="last_name">Efternavn</string>
+    <string name="firstNameLabel">Fornavn</string>
+    <string name="lastNameLabel">Efternavn</string>
     <string name="bank_selection_title">Vælg din bank</string>
     <string name="bank_selection_hint">Søg banker</string>
     <string name="bank_selection_error_message">Loading af bank mislykkedes. Tjek din forbindelse, og prøv igen.</string>
