--- a/primer-sdk-android/src/main/res/values-de/strings.xml
+++ b/primer-sdk-android/src/main/res/values-de/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Mandat bestätigen</string>
     <string name="name">Name</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Adresszeile 1</string>
-    <string name="address_line_2">Adresszeile 2 (optional)</string>
-    <string name="address_city">Stadt</string>
-    <string name="address_state">Staat</string>
-    <string name="address_country_code">Land</string>
-    <string name="address_postal_code">PLZ</string>
+    <string name="addressLine1">Adresszeile 1</string>
+    <string name="addressLine2">Adresszeile 2 (optional)</string>
+    <string name="cityLabel">Stadt</string>
+    <string name="stateLabel">Staat</string>
+    <string name="countryLabel">Land</string>
+    <string name="postalCodeLabel">PLZ</string>
     <string name="dd_mandate_error">Bitte prüfe, ob alle deine Angaben korrekt sind</string>
     <string name="dd_cancel_message">Willst du das Hinzufügen eines Bankkontos abbrechen?</string>
     <string name="data_will_be_lost">Deine Daten werden gelöscht</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Gib deine E-Mail ein</string>
     <string name="enter_address">Geben Sie Ihre Adresse ein</string>
     <string name="first_last_name">Vor- und Nachname</string>
-    <string name="first_name">Vorname</string>
-    <string name="last_name">Nachname</string>
+    <string name="firstNameLabel">Vorname</string>
+    <string name="lastNameLabel">Nachname</string>
     <string name="bank_selection_title">Wähle deine Bank</string>
     <string name="bank_selection_hint">Banken suchen</string>
     <string name="bank_selection_error_message">Bank konnte nicht geladen werden. Überprüfe deine Verbindung und versuche es erneut.</string>
