--- a/primer-sdk-android/src/main/res/values-el/strings.xml
+++ b/primer-sdk-android/src/main/res/values-el/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Επιβεβαίωση εντολής</string>
     <string name="name">Όνομα</string>
     <string name="email">Email</string>
-    <string name="address_line_1">Διεύθυνση - γραμμή 1</string>
-    <string name="address_line_2">Διεύθυνση - γραμμή 2 (προαιρετικά)</string>
-    <string name="address_city">Πόλη</string>
-    <string name="address_state">Πολιτεία</string>
-    <string name="address_country_code">Χώρα</string>
-    <string name="address_postal_code">Ταχυδρομικός Κώδικας</string>
+    <string name="addressLine1">Διεύθυνση - γραμμή 1</string>
+    <string name="addressLine2">Διεύθυνση - γραμμή 2 (προαιρετικά)</string>
+    <string name="cityLabel">Πόλη</string>
+    <string name="stateLabel">Πολιτεία</string>
+    <string name="countryLabel">Χώρα</string>
+    <string name="postalCodeLabel">Ταχυδρομικός Κώδικας</string>
     <string name="dd_mandate_error">Παρακαλούμε, ελέγξτε ότι όλα τα στοιχεία σας είναι σωστά</string>
     <string name="dd_cancel_message">Θέλετε να ακυρώσετε την προσθήκη τραπεζικού λογαριασμού;</string>
     <string name="data_will_be_lost">Τα δεδομένα σας θα διαγραφούν</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Γράψτε το email σας</string>
     <string name="enter_address">Γράψτε τη διεύθυνσή σας</string>
     <string name="first_last_name">Όνομα και επίθετο</string>
-    <string name="first_name">Όνομα</string>
-    <string name="last_name">Επίθετο</string>
+    <string name="firstNameLabel">Όνομα</string>
+    <string name="lastNameLabel">Επίθετο</string>
     <string name="bank_selection_title">Επιλέξτε την τράπεζά σας</string>
     <string name="bank_selection_hint">Αναζήτηση τραπεζών</string>
     <string name="bank_selection_error_message">Αποτυχία φόρτωσης τράπεζας. Ελέγξτε τη σύνδεσή σας και δοκιμάστε πάλι.</string>
