--- a/primer-sdk-android/src/main/res/values-fr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-fr/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Confirmer le mandat</string>
     <string name="name">Nom</string>
     <string name="email">Email</string>
-    <string name="address_line_1">Ligne d\'adresse 1</string>
-    <string name="address_line_2">Adresse 2 (facultatif)</string>
-    <string name="address_city">Ville</string>
-    <string name="address_state">Région</string>
-    <string name="address_country_code">Pays</string>
-    <string name="address_postal_code">Code postal</string>
+    <string name="addressLine1">Ligne d\'adresse 1</string>
+    <string name="addressLine2">Adresse 2 (facultatif)</string>
+    <string name="cityLabel">Ville</string>
+    <string name="stateLabel">Région</string>
+    <string name="countryLabel">Pays</string>
+    <string name="postalCodeLabel">Code postal</string>
     <string name="dd_mandate_error">Veuillez vérifier que toutes vos informations sont correctes.</string>
     <string name="dd_cancel_message">Voulez-vous annuler l\'ajout d\'un compte bancaire ?</string>
     <string name="data_will_be_lost">Vos données seront effacées.</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Saisissez votre e-mail.</string>
     <string name="enter_address">Saisissez votre adresse.</string>
     <string name="first_last_name">Prénom et nom</string>
-    <string name="first_name">Nom</string>
-    <string name="last_name">Prénom</string>
+    <string name="firstNameLabel">Nom</string>
+    <string name="lastNameLabel">Prénom</string>
     <string name="bank_selection_title">Choisir votre banque</string>
     <string name="bank_selection_hint">Rechercher des banques</string>
     <string name="bank_selection_error_message">Le chargement de la banque a échoué. Vérifiez votre connexion et essayez à nouveau.</string>
