--- a/primer-sdk-android/src/main/res/values-it/strings.xml
+++ b/primer-sdk-android/src/main/res/values-it/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Conferma autorizzazione</string>
     <string name="name">Nome</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Indirizzo riga 1</string>
-    <string name="address_line_2">Indirizzo riga 2 (facoltativo)</string>
-    <string name="address_city">Città</string>
-    <string name="address_state">Stato</string>
-    <string name="address_country_code">Paese</string>
-    <string name="address_postal_code">Codice postale</string>
+    <string name="addressLine1">Indirizzo riga 1</string>
+    <string name="addressLine2">Indirizzo riga 2 (facoltativo)</string>
+    <string name="cityLabel">Città</string>
+    <string name="stateLabel">Stato</string>
+    <string name="countryLabel">Paese</string>
+    <string name="postalCodeLabel">Codice postale</string>
     <string name="dd_mandate_error">Controlla che tutte le tue informazioni siano corrette</string>
     <string name="dd_cancel_message">Vuoi annullare l\'aggiunta di un conto bancario?</string>
     <string name="data_will_be_lost">I tuoi dati verranno cancellati</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Inserisci la tua email</string>
     <string name="enter_address">Inserisci il tuo indirizzo</string>
     <string name="first_last_name">Nome e cognome</string>
-    <string name="first_name">Nome</string>
-    <string name="last_name">Cognome</string>
+    <string name="firstNameLabel">Nome</string>
+    <string name="lastNameLabel">Cognome</string>
     <string name="bank_selection_title">Scegli la banca</string>
     <string name="bank_selection_hint">Cerca le banche</string>
     <string name="bank_selection_error_message">Impossibile caricare la banca. Controlla la connessione e riprova.</string>
