--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Machtiging bevestigen</string>
     <string name="name">Naam</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Adres regel 1</string>
-    <string name="address_line_2">Adres regel 2 (optioneel)</string>
-    <string name="address_city">Stad</string>
-    <string name="address_state">Staat</string>
-    <string name="address_country_code">Land</string>
-    <string name="address_postal_code">Postcode</string>
+    <string name="addressLine1">Adres regel 1</string>
+    <string name="addressLine2">Adres regel 2 (optioneel)</string>
+    <string name="cityLabel">Stad</string>
+    <string name="stateLabel">Staat</string>
+    <string name="countryLabel">Land</string>
+    <string name="postalCodeLabel">Postcode</string>
     <string name="dd_mandate_error">Controleer of al uw informatie correct is</string>
     <string name="dd_cancel_message">Wilt u het toevoegen van een bankrekening annuleren?</string>
     <string name="data_will_be_lost">Uw gegevens worden gewist</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Vul uw e-mailadres in</string>
     <string name="enter_address">Vul uw adres in</string>
     <string name="first_last_name">Voornaam en achternaam</string>
-    <string name="first_name">Voornaam</string>
-    <string name="last_name">Achternaam</string>
+    <string name="firstNameLabel">Voornaam</string>
+    <string name="lastNameLabel">Achternaam</string>
     <string name="bank_selection_title">Uw bank kiezen</string>
     <string name="bank_selection_hint">Banken zoeken</string>
     <string name="bank_selection_error_message">Bank kan niet worden geladen. Controleer uw verbinding en probeer het opnieuw.</string>
