--- a/primer-sdk-android/src/main/res/values-pl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pl/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Potwierdź dyspozycję</string>
     <string name="name">Imię i nazwisko</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Adres — wiersz 1</string>
-    <string name="address_line_2">2. linia adresu (opcjonalnie)</string>
-    <string name="address_city">Miejscowość</string>
-    <string name="address_state">Województwo</string>
-    <string name="address_country_code">Kraj</string>
-    <string name="address_postal_code">Kod pocztowy</string>
+    <string name="addressLine1">Adres — wiersz 1</string>
+    <string name="addressLine2">2. linia adresu (opcjonalnie)</string>
+    <string name="cityLabel">Miejscowość</string>
+    <string name="stateLabel">Województwo</string>
+    <string name="countryLabel">Kraj</string>
+    <string name="postalCodeLabel">Kod pocztowy</string>
     <string name="dd_mandate_error">Sprawdź, czy wszystkie Twoje dane są prawidlowe</string>
     <string name="dd_cancel_message">Czy chcesz anulować dodanie konta bankowego?</string>
     <string name="data_will_be_lost">Twoje dane zostaną wymazane</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Wpisz adres e-mail</string>
     <string name="enter_address">Wpisz adres</string>
     <string name="first_last_name">Imię i nazwisko</string>
-    <string name="first_name">Imię</string>
-    <string name="last_name">Nazwisko</string>
+    <string name="firstNameLabel">Imię</string>
+    <string name="lastNameLabel">Nazwisko</string>
     <string name="bank_selection_title">Wybierz bank</string>
     <string name="bank_selection_hint">Wyszukaj banki</string>
     <string name="bank_selection_error_message">Wczytanie banku nie powiodło się. Sprawdź połączenie i spróbuj ponownie.</string>
