--- a/primer-sdk-android/src/main/res/values-pt/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pt/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Confirmar mandato</string>
     <string name="name">Nome</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Linha de morada 1</string>
-    <string name="address_line_2">Linha de morada 2 (opcional)</string>
-    <string name="address_city">Cidade</string>
-    <string name="address_state">Distrito</string>
-    <string name="address_country_code">País</string>
-    <string name="address_postal_code">Código Postal</string>
+    <string name="addressLine1">Linha de morada 1</string>
+    <string name="addressLine2">Linha de morada 2 (opcional)</string>
+    <string name="cityLabel">Cidade</string>
+    <string name="stateLabel">Distrito</string>
+    <string name="countryLabel">País</string>
+    <string name="postalCodeLabel">Código Postal</string>
     <string name="dd_mandate_error">Verifique se toda a sua informação está correta</string>
     <string name="dd_cancel_message">Deseja cancelar a adição de uma conta bancária?</string>
     <string name="data_will_be_lost">Os seus dados serão excluídos</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Insira o seu e-mail</string>
     <string name="enter_address">Insira a sua morada</string>
     <string name="first_last_name">Primeiro e último nome</string>
-    <string name="first_name">Primeiro nome</string>
-    <string name="last_name">Último nome</string>
+    <string name="firstNameLabel">Primeiro nome</string>
+    <string name="lastNameLabel">Último nome</string>
     <string name="bank_selection_title">Escolha o seu banco</string>
     <string name="bank_selection_hint">Procurar bancos</string>
     <string name="bank_selection_error_message">Não foi possível carregar o banco. Verifique a sua ligação e tente novamente.</string>
