--- a/primer-sdk-android/src/main/res/values-sv/strings.xml
+++ b/primer-sdk-android/src/main/res/values-sv/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Bekräfta fullmakt</string>
     <string name="name">Namn</string>
     <string name="email">E-postadress</string>
-    <string name="address_line_1">Adressrad 1</string>
-    <string name="address_line_2">Adressrad 2 (ej obligatorisk)</string>
-    <string name="address_city">Stad</string>
-    <string name="address_state">Stat, region</string>
-    <string name="address_country_code">Land</string>
-    <string name="address_postal_code">Postnummer</string>
+    <string name="addressLine1">Adressrad 1</string>
+    <string name="addressLine2">Adressrad 2 (ej obligatorisk)</string>
+    <string name="cityLabel">Stad</string>
+    <string name="stateLabel">Stat, region</string>
+    <string name="countryLabel">Land</string>
+    <string name="postalCodeLabel">Postnummer</string>
     <string name="dd_mandate_error">Kontrollera att alla dina uppgifter är korrekta</string>
     <string name="dd_cancel_message">Vill du avbryta registrering av bankkonto?</string>
     <string name="data_will_be_lost">Dina uppgifter raderas</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Ange din e-postadress</string>
     <string name="enter_address">Ange din adress</string>
     <string name="first_last_name">För- och efternamn</string>
-    <string name="first_name">Förnamn</string>
-  <string name="last_name">Efternamn</string>
+    <string name="firstNameLabel">Förnamn</string>
+  <string name="lastNameLabel">Efternamn</string>
   <string name="bank_selection_title">Välj din bank</string>
     <string name="bank_selection_hint">Sök bank</string>
     <string name="bank_selection_error_message">Det gick inte att ansluta till din bank. Kontrollera din internetanslutning och försök igen.</string>
