--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Talimatı onayla</string>
     <string name="name">Ad</string>
     <string name="email">E-posta</string>
-    <string name="address_line_1">Adres satırı 1</string>
-    <string name="address_line_2">Adres satırı 2 (opsiyonel)</string>
-    <string name="address_city">Şehir</string>
-    <string name="address_state">Eyalet</string>
-    <string name="address_country_code">Ülke</string>
-    <string name="address_postal_code">Posta Kodu</string>
+    <string name="addressLine1">Adres satırı 1</string>
+    <string name="addressLine2">Adres satırı 2 (opsiyonel)</string>
+    <string name="cityLabel">Şehir</string>
+    <string name="stateLabel">Eyalet</string>
+    <string name="countryLabel">Ülke</string>
+    <string name="postalCodeLabel">Posta Kodu</string>
     <string name="dd_mandate_error">Tüm bilgilerinizin doğru olduğundan emin olun</string>
     <string name="dd_cancel_message">Banka hesabı eklemeyi iptal etmek mi istiyorsunuz?</string>
     <string name="data_will_be_lost">Verileriniz silinecektir</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">E-postanızı girin</string>
     <string name="enter_address">Adresinizi girin</string>
     <string name="first_last_name">İsim ve soyad</string>
-    <string name="first_name">İsim</string>
-  <string name="last_name">Soyad</string>
+    <string name="firstNameLabel">İsim</string>
+  <string name="lastNameLabel">Soyad</string>
   <string name="bank_selection_title">Bankanızı seçin</string>
     <string name="bank_selection_hint">Banka ara</string>
     <string name="bank_selection_error_message">Banka yüklenemedi. Bağlantınızı kontrol edip tekrar deneyin.</string>
