--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Confirmar autorización</string>
     <string name="name">Nombre</string>
     <string name="email">E-mail</string>
-    <string name="address_line_1">Línea de dirección 1</string>
-    <string name="address_line_2">Línea de dirección 2 (opcional)</string>
-    <string name="address_city">Ciudad</string>
-    <string name="address_state">Provincia</string>
-    <string name="address_country_code">País</string>
-    <string name="address_postal_code">Código postal</string>
+    <string name="addressLine1">Línea de dirección 1</string>
+    <string name="addressLine2">Línea de dirección 2 (opcional)</string>
+    <string name="cityLabel">Ciudad</string>
+    <string name="stateLabel">Provincia</string>
+    <string name="countryLabel">País</string>
+    <string name="postalCodeLabel">Código postal</string>
     <string name="dd_mandate_error">Compruebe que todos sus datos son correctos</string>
     <string name="dd_cancel_message">¿Quiere cancelar el añadir una cuenta bancaria?</string>
     <string name="data_will_be_lost">Se borrarán sus datos</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Introduzca su correo electrónico</string>
     <string name="enter_address">Introduzca su dirección</string>
     <string name="first_last_name">Nombre y apellidos</string>
-    <string name="first_name">Nombre</string>
-    <string name="last_name">Apellidos</string>
+    <string name="firstNameLabel">Nombre</string>
+    <string name="lastNameLabel">Apellidos</string>
     <string name="bank_selection_title">Elige tu banco</string>
     <string name="bank_selection_hint">Buscar bancos</string>
     <string name="bank_selection_error_message">No se ha podido cargar el banco. Comprueba tu conexión e inténtalo de nuevo.</string>
