--- a/primer-sdk-android/src/main/res/values-nb/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nb/strings.xml
@@ -32,12 +32,12 @@
     <string name="confirm_dd_mandate">Bekreft mandat</string>
     <string name="name">Navn</string>
     <string name="email">E-post</string>
-    <string name="address_line_1">Adresselinje 1</string>
-    <string name="address_line_2">Adresselinje 2 (valgfri)</string>
-    <string name="address_city">By</string>
-    <string name="address_state">Fylke</string>
-    <string name="address_country_code">Land</string>
-    <string name="address_postal_code">Postnummer</string>
+    <string name="addressLine1">Adresselinje 1</string>
+    <string name="addressLine2">Adresselinje 2 (valgfri)</string>
+    <string name="cityLabel">By</string>
+    <string name="stateLabel">Fylke</string>
+    <string name="countryLabel">Land</string>
+    <string name="postalCodeLabel">Postnummer</string>
     <string name="dd_mandate_error">Vennligst sjekk at all informasjonen din er korrekt</string>
     <string name="dd_cancel_message">Vil du kansellere innlegging av en bankkonto?</string>
     <string name="data_will_be_lost">Opplysningene dine blir slettet</string>
@@ -45,8 +45,8 @@
     <string name="enter_email">Legg inn e-posten din</string>
     <string name="enter_address">Legg inn adressen din</string>
     <string name="first_last_name">For- og etternavn</string>
-    <string name="first_name">Fornavn</string>
-    <string name="last_name">Etternavn</string>
+    <string name="firstNameLabel">Fornavn</string>
+    <string name="lastNameLabel">Etternavn</string>
     <string name="bank_selection_title">Velg banken din</string>
     <string name="bank_selection_hint">Søk etter banker</string>
     <string name="bank_selection_error_message">Kunne ikke laste inn bank. Sjekk forbindelsen din og prøv på nytt.</string>
