[DEX-1207] Insert all translations for card form, billing address form

--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Autorizado</string>
+    <string name="label_declined">Rechazado</string>
+    <string name="label_failed">Se ha producido un error</string>
     <string name="country_search_hint">Encontrar un país</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">El código postal es obligatorio</string>
+    <string name="countryCodeErrorRequired">El país es obligatorio</string>
+    <string name="cityErrorRequired">La ciudad es obligatoria</string>
+    <string name="stateErrorRequired">El estado, la región o la provincia son obligatorios</string>
+    <string name="addressLine1ErrorRequired">La línea 1 de dirección es obligatoria</string>
+    <string name="firstNameErrorRequired">El nombre es obligatorio</string>
+    <string name="lastNameErrorRequired">Los apellidos son obligatorios</string>
 </resources>
