--- a/primer-sdk-android/src/main/res/values-sv/strings.xml
+++ b/primer-sdk-android/src/main/res/values-sv/strings.xml
@@ -46,8 +46,8 @@
     <string name="enter_address">Ange din adress</string>
     <string name="first_last_name">För- och efternamn</string>
     <string name="firstNameLabel">Förnamn</string>
-  <string name="lastNameLabel">Efternamn</string>
-  <string name="bank_selection_title">Välj din bank</string>
+    <string name="lastNameLabel">Efternamn</string>
+    <string name="bank_selection_title">Välj din bank</string>
     <string name="bank_selection_hint">Sök bank</string>
     <string name="bank_selection_error_message">Det gick inte att ansluta till din bank. Kontrollera din internetanslutning och försök igen.</string>
     <string name="bank_selection_try_again">Försök igen</string>
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Auktoriserad</string>
+    <string name="label_declined">Nekad</string>
+    <string name="label_failed">Misslyckades</string>
     <string name="country_search_hint">Hitta ett land</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">Postnummer är obligatoriskt</string>
+    <string name="countryCodeErrorRequired">Land krävs</string>
+    <string name="cityErrorRequired">Stad är obligatorisk</string>
+    <string name="stateErrorRequired">Stat, region eller län krävs</string>
+    <string name="addressLine1ErrorRequired">Adressrad 1 är obligatorisk</string>
+    <string name="firstNameErrorRequired">Förnamn krävs</string>
+    <string name="lastNameErrorRequired">Efternamn krävs</string>
 </resources>
