--- a/primer-sdk-android/src/main/res/values-da/strings.xml
+++ b/primer-sdk-android/src/main/res/values-da/strings.xml
@@ -35,7 +35,7 @@
     <string name="addressLine1">Adresselinje 1</string>
     <string name="addressLine2">Adresselinje 2 (valgfrit)</string>
     <string name="cityLabel">By</string>
-    <string name="stateLabel">Stat</string>
+    <string name="stateLabel">Stat / Region / Land</string>
     <string name="countryLabel">Land</string>
     <string name="postalCodeLabel">Postnummer</string>
     <string name="dd_mandate_error">Tjek venligst at alle dine oplysninger er korrekte</string>
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Autoriseret</string>
+    <string name="label_declined">Afvist</string>
+    <string name="label_failed">Mislykkedes</string>
     <string name="country_search_hint">Finde land</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">Postnummer er nødvendigt</string>
+    <string name="countryCodeErrorRequired">Land er påkrævet</string>
+    <string name="cityErrorRequired">By er nødvendigt</string>
+    <string name="stateErrorRequired">Stat, region eller land er påkrævet</string>
+    <string name="addressLine1ErrorRequired">Adresselinje 1 er nødvendig</string>
+    <string name="firstNameErrorRequired">Fornavn er påkrævet</string>
+    <string name="lastNameErrorRequired">Efternavn er påkrævet</string>
 </resources>
