--- a/primer-sdk-android/src/main/res/values-nb/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nb/strings.xml
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Autorisert</string>
+    <string name="label_declined">Avvist</string>
+    <string name="label_failed">Mislyktes</string>
     <string name="country_search_hint">Finne et land</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">Postnummer er obligatorisk</string>
+    <string name="countryCodeErrorRequired">Land er obligatorisk</string>
+    <string name="cityErrorRequired">By er obligatorisk</string>
+    <string name="stateErrorRequired">Stat, region eller fylke er obligatorisk</string>
+    <string name="addressLine1ErrorRequired">Adresselinje 1 er obligatorisk</string>
+    <string name="firstNameErrorRequired">Fornavn er obligatorisk</string>
+    <string name="lastNameErrorRequired">Etternavn er obligatorisk</string>
 </resources>
