--- a/primer-sdk-android/src/main/res/values-pl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pl/strings.xml
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Zatwierdzone</string>
+    <string name="label_declined">Odrzucone</string>
+    <string name="label_failed">Nieudane</string>
     <string name="country_search_hint">Znajdź kraj</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">Wymagany jest kod pocztowy</string>
+    <string name="countryCodeErrorRequired">Kraj jest wymagany</string>
+    <string name="cityErrorRequired">Wymagane jest miasto</string>
+    <string name="stateErrorRequired">Stan, region lub województwo jest wymagane</string>
+    <string name="addressLine1ErrorRequired">Wymagana jest 1. linia adresowa</string>
+    <string name="firstNameErrorRequired">Imię jest wymagane</string>
+    <string name="lastNameErrorRequired">Nazwisko jest wymagane</string>
 </resources>
