--- a/primer-sdk-android/src/main/res/values-pt/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pt/strings.xml
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Autorizado</string>
+    <string name="label_declined">Recusado</string>
+    <string name="label_failed">Falhado</string>
     <string name="country_search_hint">Encontrar um país</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">É necessário o código postal</string>
+    <string name="countryCodeErrorRequired">É necessário o País</string>
+    <string name="cityErrorRequired">É necessária a Cidade</string>
+    <string name="stateErrorRequired">É necessário Estado, Região ou País</string>
+    <string name="addressLine1ErrorRequired">É necessária a Linha de Endereço 1</string>
+    <string name="firstNameErrorRequired">É necessário o primeiro nome</string>
+    <string name="lastNameErrorRequired">É necessário o apelido</string>
 </resources>
