--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -111,18 +111,18 @@
     <string name="twoc_2p_button">Pay in installments</string>
     <string name="pay_with">Pay with</string>
     <string name="primer_test_header_description">This is a mocked flow for sandbox. Choose the result you want to test from the list below.</string>
-    <string name="label_authorized">Authorized</string>
-    <string name="label_declined">Declined</string>
-    <string name="label_failed">Failed</string>
+    <string name="label_authorized">Yetkilendirildi</string>
+    <string name="label_declined">Reddedildi</string>
+    <string name="label_failed">Başarısız</string>
     <string name="country_search_hint">Bir ülke bul</string>
     <string name="title_card_form_billing_address">Billing address</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
-    <string name="postalCodeErrorRequired">Postal code is required</string>
-    <string name="countryCodeErrorRequired">Country is required</string>
-    <string name="cityErrorRequired">City is required</string>
-    <string name="stateErrorRequired">State, Region or County is required</string>
-    <string name="addressLine1ErrorRequired">Address line 1 is required</string>
-    <string name="firstNameErrorRequired">First Name is required</string>
-    <string name="lastNameErrorRequired">Last Name is required</string>
+    <string name="postalCodeErrorRequired">Posta kodu zorunlu</string>
+    <string name="countryCodeErrorRequired">Ülke gerekli</string>
+    <string name="cityErrorRequired">Şehir zorunlu</string>
+    <string name="stateErrorRequired">Eyalet, Bölge ya da İlçe gerekli</string>
+    <string name="addressLine1ErrorRequired">Adres satırı 1 zorunlu</string>
+    <string name="firstNameErrorRequired">İsim gerekli</string>
+    <string name="lastNameErrorRequired">Soyadı gerekli</string>
 </resources>
