--- a/primer-sdk-android/src/main/res/values-de/strings.xml
+++ b/primer-sdk-android/src/main/res/values-de/strings.xml
@@ -115,7 +115,7 @@
     <string name="label_declined">Abgelehnt</string>
     <string name="label_failed">Gescheitert</string>
     <string name="country_search_hint">Ein Land finden</string>
-    <string name="title_card_form_billing_address">Billing address</string>
+    <string name="billingAddressLabel">Rechnungsadresse</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
     <string name="postalCodeErrorRequired">Postleitzahl ist erforderlich</string>
