--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -115,7 +115,7 @@
     <string name="label_declined">Rechazado</string>
     <string name="label_failed">Se ha producido un error</string>
     <string name="country_search_hint">Encontrar un país</string>
-    <string name="title_card_form_billing_address">Billing address</string>
+    <string name="billingAddressLabel">Dirección de facturación</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
     <string name="postalCodeErrorRequired">El código postal es obligatorio</string>
