--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -115,7 +115,7 @@
     <string name="label_declined">Declined</string>
     <string name="label_failed">Failed</string>
     <string name="country_search_hint">Land vinden</string>
-    <string name="title_card_form_billing_address">Billing address</string>
+    <string name="billingAddressLabel">Factuuradres</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
     <string name="postalCodeErrorRequired">Postcode is vereist</string>
