--- a/primer-sdk-android/src/main/res/values-pl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pl/strings.xml
@@ -115,7 +115,7 @@
     <string name="label_declined">Odrzucone</string>
     <string name="label_failed">Nieudane</string>
     <string name="country_search_hint">Znajdź kraj</string>
-    <string name="title_card_form_billing_address">Billing address</string>
+    <string name="billingAddressLabel">Adres rozliczeniowy</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
     <string name="postalCodeErrorRequired">Wymagany jest kod pocztowy</string>
