--- a/primer-sdk-android/src/main/res/values-sv/strings.xml
+++ b/primer-sdk-android/src/main/res/values-sv/strings.xml
@@ -115,7 +115,7 @@
     <string name="label_declined">Nekad</string>
     <string name="label_failed">Misslyckades</string>
     <string name="country_search_hint">Hitta ett land</string>
-    <string name="title_card_form_billing_address">Billing address</string>
+    <string name="billingAddressLabel">Faktureringsadress</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
     <string name="postalCodeErrorRequired">Postnummer är obligatoriskt</string>
