--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -115,7 +115,7 @@
     <string name="label_declined">Reddedildi</string>
     <string name="label_failed">Başarısız</string>
     <string name="country_search_hint">Bir ülke bul</string>
-    <string name="title_card_form_billing_address">Billing address</string>
+    <string name="billingAddressLabel">Fatura adresi</string>
     <string name="pay_with_card">Pay with card</string>
     <string name="card_details">Card details</string>
     <string name="postalCodeErrorRequired">Posta kodu zorunlu</string>
