Add field for setup metadata for easy testing

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="add_customer_id">Add customer ID</string>
     <string name="customer_id">Customer ID</string>
     <string name="descriptor">Descriptor</string>
+    <string name="metadata">Metadata like \'TEST_CASE:SOME_APM\'</string>
     <string name="country">Country</string>
     <string name="amount">Amount</string>
     <string name="currency">Currency</string>
