[DEX-1207] Fix merge conflicts with master 2.1.0 and update env selector for example app to dropDown

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -58,4 +58,11 @@
     <string name="env_sandbox">Sandbox</string>
     <string name="api_key">Put here API KEY</string>
 
+    <string-array name="app_environments">
+        <item>@string/env_sandbox</item>
+        <item>@string/env_dev</item>
+        <item>@string/env_staging</item>
+        <item>@string/env_production</item>
+    </string-array>
+
 </resources>
