--- a/primer-sdk-android/src/main/res/values-nb/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nb/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">Adresselinje 1 er obligatorisk</string>
     <string name="firstNameErrorRequired">Fornavn er obligatorisk</string>
     <string name="lastNameErrorRequired">Etternavn er obligatorisk</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
