--- a/primer-sdk-android/src/main/res/values-el/strings.xml
+++ b/primer-sdk-android/src/main/res/values-el/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">Απαιτείται η γραμμή διεύθυνσης 1</string>
     <string name="firstNameErrorRequired">Απαιτείται όνομα</string>
     <string name="lastNameErrorRequired">Απαιτείται επίθετο</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
