--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">La línea 1 de dirección es obligatoria</string>
     <string name="firstNameErrorRequired">El nombre es obligatorio</string>
     <string name="lastNameErrorRequired">Los apellidos son obligatorios</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
