--- a/primer-sdk-android/src/main/res/values-it/strings.xml
+++ b/primer-sdk-android/src/main/res/values-it/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">La riga 1 dell\'indirizzo è obbligatoria</string>
     <string name="firstNameErrorRequired">Il nome è necessario</string>
     <string name="lastNameErrorRequired">Il cognome è necessario</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
