--- a/primer-sdk-android/src/main/res/values-pl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pl/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">Wymagana jest 1. linia adresowa</string>
     <string name="firstNameErrorRequired">Imię jest wymagane</string>
     <string name="lastNameErrorRequired">Nazwisko jest wymagane</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
