--- a/primer-sdk-android/src/main/res/values-pt/strings.xml
+++ b/primer-sdk-android/src/main/res/values-pt/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">É necessária a Linha de Endereço 1</string>
     <string name="firstNameErrorRequired">É necessário o primeiro nome</string>
     <string name="lastNameErrorRequired">É necessário o apelido</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
