--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -125,4 +125,7 @@
     <string name="addressLine1ErrorRequired">Adres satırı 1 zorunlu</string>
     <string name="firstNameErrorRequired">İsim gerekli</string>
     <string name="lastNameErrorRequired">Soyadı gerekli</string>
+    <string name="completeYourPayment">Complete your payment</string>
+    <string name="dueAt">Due at</string>
+    <string name="pleaseTransferFunds">Please Transfer funds to the provided DBS bank account using your Singapore based bank account via FAST (preferred), MEPS or GIRO.</string>
 </resources>
