--- a/primer-sdk-android/src/main/res/values-zh-rCN/strings.xml
+++ b/primer-sdk-android/src/main/res/values-zh-rCN/strings.xml
@@ -144,4 +144,5 @@
     <string name="test_mail_com">test@mail.com</string>
     <string name="twoc_2p_button">分期付款</string>
     <string name="uploadScreenshot">在您的银行应用中上传屏幕截图</string>
+    <string name="primer_payment_method_button_content_description">Pay with %s</string>
 </resources>
