--- a/primer-sdk-android/src/main/res/values-zh-rHK/strings.xml
+++ b/primer-sdk-android/src/main/res/values-zh-rHK/strings.xml
@@ -135,4 +135,5 @@
     <string name="test_mail_com">test@mail.com</string>
     <string name="twoc_2p_button">分期支付</string>
     <string name="uploadScreenshot">上傳截圖到你的銀行流動應用程式</string>
+    <string name="primer_payment_method_button_content_description">Pay with %s</string>
 </resources>
